--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,11 @@ name = "pypi"
 [packages]
 fastapi = "==0.104.1"
 uvicorn = "==0.24.0"
-httpx = "==0.25.1"
 pydantic = "<=2.12.0"
 aiomysql = "==0.2.0"
 pymysql = "==1.1.0"
 cryptography = "*"
-requests = "*"
+httpx = "*"
 
 [dev-packages]
 
