--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       DB_PASSWORD: tarot_pass
       DB_NAME: tarot_db
       OLLAMA_URL: http://ollama:11434
+      OLLAMA_MODEL: gemma2:2b
     volumes:
       - app_data:/app
     depends_on:
